crates/lighthouse-report/tests/snapshots/agent__compact_agent_json_groups_findings_by_decision.snap
---
source: crates/lighthouse-report/tests/agent.rs
expression: out
---
{"counts":{"allowed":1,"error":1,"info":1,"review":4,"suppressed":2,"warn":3},"groups":[{"files":{"a.txt":[["1:1","custom finding","c8dfae3"]]},"rule":"acme/custom","severity":"error"},{"expected":"package sample\n\nfunc Helper() {}","files":{"bar/bar.go":[["4:1","exported function Func1 must have a doc comment","adc7d1d"],["7:1","exported function Func2 must have a doc comment","ab2cb8c",{"evidence":{"receiver":"T"},"note":"verdict expired: rule changed"}]]},"requirement":"Exported symbols SHOULD have doc comments in the language's standard form. Public API changes SHOULD document user-visible behavior, constraints, ownership, or other facts the code cannot express.","review":true,"rule":"design/exported-doc","severity":"warn"},{"evidence":{"callees":["a","b c"],"fan_in":2,"fan_out":14,"symbol":"jit::compile#function"},"expected":"package sample\n\nfunc hub() {\n\tleft()\n\tright()\n}\n\nfunc left()  {}\nfunc right() {}\n\nfunc a() { hub() }\nfunc b() { hub() }","files":{"internal/jit/compile.go":[["350:1","function coordinates 14 collaborators in its package","f5ed6fd"]]},"requirement":"Coupling SHOULD be judged from direct intra-package fan-in and fan-out, that is the functions and methods of the same package that call a symbol or are called by it, against deliberately high thresholds. Calls from other packages and from tests do not count: a widely used public function is a service, not a hub.","review":true,"rule":"design/coupling-signal","severity":"warn"},{"expected":"pub fn run(x: u8) -> u8 {\n    clamp(x) + 1\n}\n\npub fn other(x: u8) -> u8 {\n    clamp(x) + 2\n}\n\nfn clamp(x: u8) -> u8 {\n    if x > 10 { 10 } else { x }\n}","files":{"src/lib.rs":[["7:1","private helper has one caller","d3d6fba"]]},"requirement":"A private helper SHOULD have at least two callers.","review":true,"rule":"design/private-helper-callers","severity":"info"}],"incomplete":[["broken.go","type error"]],"reasons":{"confirmed":["fixed","accepted-debt","none"],"deferred":["none"],"rejected":["false-positive","intentional-exception","scope-too-broad","project-allowed","not-worth-fixing"]},"resolve":"review_resolve {fingerprint, verdict, reason}","status":"incomplete"}
