crates/lighthouse-report/tests/snapshots/agent__compact_agent_text_groups_findings_by_decision.snap
---
source: crates/lighthouse-report/tests/agent.rs
expression: "render_with(Format::Agent, &findings, &gap(), &briefing)"
---
acme/custom error
  a.txt:1:1 custom finding c8dfae3
design/exported-doc warn [review] — Exported symbols SHOULD have doc comments in the language's standard form. Public API changes SHOULD document user-visible behavior, constraints, ownership, or other facts the code cannot express.
  expected:
    package sample

    func Helper() {}
  bar/bar.go:4:1 exported function Func1 must have a doc comment adc7d1d
  bar/bar.go:7:1 exported function Func2 must have a doc comment ab2cb8c {receiver=T} (note: verdict expired: rule changed)
design/coupling-signal warn [review] — Coupling SHOULD be judged from direct intra-package fan-in and fan-out, that is the functions and methods of the same package that call a symbol or are called by it, against deliberately high thresholds. Calls from other packages and from tests do not count: a widely used public function is a service, not a hub.
  expected:
    package sample

    func hub() {
    	left()
    	right()
    }

    func left()  {}
    func right() {}

    func a() { hub() }
    func b() { hub() }
  evidence: callees=["a","b c"] fan_in=2 fan_out=14 symbol=jit::compile#function
  internal/jit/compile.go:350:1 function coordinates 14 collaborators in its package f5ed6fd
design/private-helper-callers info [review] — A private helper SHOULD have at least two callers.
  expected:
    pub fn run(x: u8) -> u8 {
        clamp(x) + 1
    }

    pub fn other(x: u8) -> u8 {
        clamp(x) + 2
    }

    fn clamp(x: u8) -> u8 {
        if x > 10 { 10 } else { x }
    }
  src/lib.rs:7:1 private helper has one caller d3d6fba
broken.go: incomplete: type error
resolve: lighthouse review resolve <fingerprint> --verdict <verdict> --reason <reason> --reviewer-kind agent
reasons: confirmed=fixed|accepted-debt|none; rejected=false-positive|intentional-exception|scope-too-broad|project-allowed|not-worth-fixing; deferred=none
summary: 1 error, 3 warn, 1 info, 4 review, 1 incomplete, 2 suppressed, 1 allowed
