crates/lighthouse-report/tests/snapshots/agent__full_agent_text_gives_each_finding_everything_needed_to_act.snap
---
source: crates/lighthouse-report/tests/agent.rs
expression: "render_with(Format::Agent, &findings, &gap(), &briefing)"
---
design/coupling-signal  warn  internal/jit/compile.go:350:1
  owner:       jit::compile#function
  message:     function coordinates 14 collaborators in its package
  requirement: Coupling SHOULD be judged from direct intra-package fan-in and fan-out, that is the functions and methods of the same package that call a symbol or are called by it, against deliberately high thresholds. Calls from other packages and from tests do not count: a widely used public function is a service, not a hub.
  intent:      A dependency hub changes for many reasons.
  evidence:    callees=["a","b c"] fan_in=2 fan_out=14
  expected:    valid go example `ordinary-fan` (sample.go), canonical
                 package sample

                 func hub() {
                 	left()
                 	right()
                 }

                 func left()  {}
                 func right() {}

                 func a() { hub() }
                 func b() { hub() }
  fingerprint: f5ed6fd96750
  resolve:     lighthouse review resolve f5ed6fd96750 --verdict <verdict> --reason <reason> --reviewer-kind agent

design/private-helper-callers  info  src/lib.rs:7:1
  owner:       m::helper#function
  message:     private helper has one caller
  requirement: A private helper SHOULD have at least two callers.
  intent:      A private helper with one caller is usually part of that caller.
  expected:    valid rust example `rust-valid` (src/lib.rs), canonical
                 pub fn run(x: u8) -> u8 {
                     clamp(x) + 1
                 }

                 pub fn other(x: u8) -> u8 {
                     clamp(x) + 2
                 }

                 fn clamp(x: u8) -> u8 {
                     if x > 10 { 10 } else { x }
                 }
  fingerprint: d3d6fba8ce7c
  resolve:     lighthouse review resolve d3d6fba8ce7c --verdict <verdict> --reason <reason> --reviewer-kind agent

acme/custom  error  a.txt:1:1
  message:     custom finding
  fingerprint: c8dfae349df1

broken.go: incomplete: type error
reasons: confirmed=fixed|accepted-debt|none; rejected=false-positive|intentional-exception|scope-too-broad|project-allowed|not-worth-fixing; deferred=none
summary: 1 error, 1 warn, 1 info, 2 review, 1 incomplete, 2 suppressed, 1 allowed
